kubernetes/apps/media/jackett/app/httproute-api.yaml
---
# secured by jackett, bypass oidc
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett-api
spec:
  hostnames:
    - jackett.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https-subdomains
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: ^/api/v2\.0/indexers/[^/]+/results(/(torznab|potato)(/[^/]+)?)?$
        - path:
            type: RegularExpression
            value: ^/dl/[^/]+/?$
      backendRefs:
        - name: jackett
          port: 9117
